frontend/tests/cases/negative/caseDischargeStyle.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/caseDischargeStyle.gr:7:3:
Variable `y` is used as graded variable, but it is bound as a linear variable.

Type error: frontend/tests/cases/negative/caseDischargeStyle.gr:14:3:
Falsifiable theorem: frontend/tests/cases/negative/caseDischargeStyle.gr:13:1:
The following theorem associated with `fooB` is falsifiable:
   ((0 : Nat) = 1) ∧ (1 = 1)